# nlpta

./: LICENSE  PHASE0_SUMMARY.md  README.md  setup.cfg  setup.py
archive/scripts/: download_ebc.py  download_sample_data.py  generate_stopword_candidates.py  train_embeddings.py
data/: bbc_full_articles.txt  merged_large_corpus.txt  sample_corpus.txt
docs/source/source/: api.rst  conf.py  index.rst
nlpta/: __init__.py  cleaning.py  datasets.py  embeddings.py  stopwords.py  tokenization.py
nlpta/datasets/: __init__.py  datasets.py
nlpta/evaluation/: __init__.py
nlpta/features/: __init__.py  bow.py  tfidf.py
nlpta/models/: __init__.py  embeddings.py
nlpta/morphology/: __init__.py  affixes.py  confidence.py  detection.py
nlpta/ngrams/: __init__.py  ngrams.py
nlpta/normalization/: NORMALIZATION_SPEC.md  __init__.py  characters.py  numerals.py  pipeline.py  punctuation.py  whitespace.py
nlpta/preprocessing/: __init__.py  cleaning.py  stopwords.py
nlpta/segmentation/: __init__.py  sentence_splitter.py
nlpta/stopwords/: __init__.py  stopword_filter.py
nlpta/tokenization/: __init__.py  pipeline.py  sentence_tokenizer.py  sentences.py  tokenizer.py  word_tokenizer.py  words.py
notebooks/: 01_cleaning_demo.ipynb  01_cleaning_demo.py
scripts/: download_bbc_amharic.py  download_more_data.py  download_wikipedia_corpus.py  merge_all_corpora.py  train_embeddings.py
tests/: __init__.py  test_cleaning.py  test_exports.py  test_features.py  test_ngrams.py  test_preprocessing.py  test_stopwords.py
