[metadata]
name = nlpta
version = 0.1.1
author = Fuad Sadik
author_email = fuadsadik21@gmail.com
description = Classical Amharic NLP preprocessing toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fuadsadik21/nlpta
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

